test/test_examples/syntactic_examples/syntax_error/error_statement_10.zig
// Syntax error: missing semicolon after return statement

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    const y : f64 = 3.14;
    return 3.85+y
}